# CabalSearch

./: CabalIndex.hs  CabalSearch.cabal  CabalSearch.hs  LICENSE  Main.hs  cabalsearch.cabal
