name:           CabalSearch
version:        0.0.1
license:        BSD3
license-file:   LICENSE
category:
copyright:      Copyright 2011 Johan Brinch
author:         Johan Brinch <brinchj@gmail.com>
maintainer:     Johan Brinch <brinchj@gmail.com>
stability:      experimental
tested-with:    GHC == 6.12.3
cabal-version:  >= 1.8
homepage:       http://github.com/brinchj/cabalsearch
bug-reports:    http://github.com/brinchj/cabalsearch/ssues
build-type:     Simple
synopsis:
        Search cabal packages by name
description:
        This package provides functionality to build a simple index of cabal
        packages and to search through it. It acts as a replacement for 'cabal list'.

executable cabalsearch
    main-is: Main.hs

    build-depends:
        base == 4.*,
        HDBC == 2.3.*,
        HDBC-sqlite3 == 2.3.*,
        bytestring,
        directory,
        filepath,
        process,
        unix

    ghc-options: -Wall
    ghc-prof-options: -auto-all

source-repository head
    type:     git
    location: http://github.com/brinchj/cabalsearch
